# kundoluk-api

kundoluk-api-master/: pyproject.toml
kundoluk-api-master/src/: app.py  exceptions.py  main.py  schemas.py  settings.py
kundoluk-api-master/src/endpoints/: __init__.py  auth.py  student.py
kundoluk-api-master/src/services/: auth.py  kundoluk.py
